--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ auto-save-list
 tramp
 .\#*
 
+# vs code
+*.code-workspace
+
 # Org-mode
 .org-id-locations
 *_archive
@@ -415,3 +418,4 @@ website/node_modules
 website/build
 website/i18n/en.json
 website/static/api
+
