Recursively ignored metals.sbt

--- a/.gitignore
+++ b/.gitignore
@@ -409,9 +409,10 @@ project/plugins/project/
 *.log
 
 .metals/
-project/metals.sbt
+**/metals.sbt
 .bloop/
 project/secret
+
 
 # mdoc
 website/node_modules
