update versions and build settings

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,15 +1,21 @@
-version = "2.3.2"
+version = "2.7.5"
 maxColumn = 120
-align = most
+align.preset = most
+align.multiline = false
 continuationIndent.defnSite = 2
 assumeStandardLibraryStripMargin = true
 docstrings = JavaDoc
 lineEndings = preserve
 includeCurlyBraceInSelectChains = false
-danglingParentheses = true
-spaces {
-  inImportCurlyBraces = true
-}
+danglingParentheses.preset = true
 optIn.annotationNewlines = true
+newlines.alwaysBeforeMultilineDef = false
 
-rewrite.rules = [SortImports, RedundantBraces]
+rewrite.rules = [RedundantBraces]
+
+rewrite.redundantBraces.generalExpressions = false
+rewriteTokens = {
+  "⇒": "=>"
+  "→": "->"
+  "←": "<-"
+}
