--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,10 @@ jobs:
         uses: coursier/cache-action@v6
       - name: Run tests
         if: ${{ !startsWith(matrix.scala, '3.1.') }}
-        run: sbt ++${{ matrix.scala }}! test${{ matrix.platform }}
+        run: sbt ++${{ matrix.scala }}! test
       - name: Run dotty tests
         if: ${{ startsWith(matrix.scala, '3.1.') && matrix.platform == 'JVM' }}
-        run: sbt ++${{ matrix.scala }}! testJVM
+        run: sbt ++${{ matrix.scala }}! test
 
   ci:
     runs-on: ubuntu-20.04
