--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       fail-fast: false
       matrix:
         java: ['adopt@1.8', 'adopt@1.11']
-        scala: ['2.11.12', '2.12.15', '2.13.8', '3.1.1']
+        scala: ['2.12.17', '2.13.9', '3.2.0']
         platform: ['JVM', 'JS', 'Native']
     steps:
       - name: Checkout current branch
@@ -62,10 +62,10 @@ jobs:
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
       - name: Run tests
-        if: ${{ !startsWith(matrix.scala, '3.1.') }}
+        if: ${{ !startsWith(matrix.scala, '3.2.') }}
         run: sbt ++${{ matrix.scala }}! test
       - name: Run dotty tests
-        if: ${{ startsWith(matrix.scala, '3.1.') && matrix.platform == 'JVM' }}
+        if: ${{ startsWith(matrix.scala, '3.2.') && matrix.platform == 'JVM' }}
         run: sbt ++${{ matrix.scala }}! test
 
   ci:
@@ -85,7 +85,7 @@ jobs:
         uses: actions/checkout@v2.3.4
         with:
           fetch-depth: 0
-      - name: Setup Scala and Java 
+      - name: Setup Scala and Java
         uses: olafurpg/setup-scala@v10
       - name: Cache scala dependencies
         uses: coursier/cache-action@v6
