--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ '8', '11', '17' ]
+        java: [ '11', '17' ]
         scala: [ '2.12.17', '2.13.10', '3.2.2' ]
         platform: [ 'JVM', 'JS', 'Native' ]
     steps:
