--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -11,6 +11,10 @@ danglingParentheses.preset = true
 optIn.annotationNewlines = true
 newlines.alwaysBeforeMultilineDef = false
 
+docstrings.wrap = yes
+
+runner.dialect = Scala213Source3
+
 rewrite.rules = [RedundantBraces]
 
 rewrite.redundantBraces.generalExpressions = false
