--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -12,6 +12,7 @@ optIn.annotationNewlines = true
 newlines.alwaysBeforeMultilineDef = false
 
 docstrings.wrap = yes
+docstrings.style = Asterisk
 
 runner.dialect = Scala213Source3
 
