Fixed scalafmt config. (#208)
* fixed linting

* fmt

* Updated to scala 3.3.0

* Updated to scala 3.3.0

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -11,6 +11,11 @@ danglingParentheses.preset = true
 optIn.annotationNewlines = true
 newlines.alwaysBeforeMultilineDef = false
 
+docstrings.wrap = yes
+docstrings.style = Asterisk
+
+runner.dialect = Scala213Source3
+
 rewrite.rules = [RedundantBraces]
 
 rewrite.redundantBraces.generalExpressions = false
