--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,11 +74,11 @@ jobs:
           java-version: ${{ matrix.java }}
           check-latest: true
       - name: Run tests
-        if: ${{ !startsWith(matrix.scala, '3.2.') }}
-        run: sbt ++${{ matrix.scala }}! test
+        if: ${{ !startsWith(matrix.scala, '3.') }}
+        run: sbt "++${{ matrix.scala }} test"
       - name: Run dotty tests
-        if: ${{ startsWith(matrix.scala, '3.2.') && matrix.platform == 'JVM' }}
-        run: sbt ++${{ matrix.scala }}! test
+        if: ${{ startsWith(matrix.scala, '3.') && matrix.platform == 'JVM' }}
+        run: sbt "++${{ matrix.scala }} test"
 
   publish:
     runs-on: ubuntu-20.04
