--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ env:
 on:
   pull_request:
   push:
-    branches: [ 'fixed-regex4' ]
+    branches: [ 'master' ]
   release:
     types:
       - published
