--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   lint:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
       - name: Checkout current branch
@@ -33,7 +33,7 @@ jobs:
         run: sbt check
 
   website:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
       - name: Checkout current branch
@@ -52,7 +52,7 @@ jobs:
         run: sbt docs/compileDocs
 
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
       fail-fast: false
@@ -80,7 +80,7 @@ jobs:
         run: sbt ++${{ matrix.scala }} zioCli${{ matrix.platform }}/test
 
   publish:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: [ lint, website, test ]
     if: github.event_name != 'pull_request'
